# cv-reviewer

./: .gitignore  README.md  analyses.db  app.py  core.py  cv_rag_db.json  guardrails.py  history_db.py  main.py  pdf_generator.py  pyproject.toml  rag_retriever.py  requirements.txt
static/: app.js  index.html  styles.css
tests/: test_api_validation.py  test_history_db.py  test_pdf.py  test_system.py
